--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
       <div id="all-contents">
         <nav>
-          <h1>Sue's Glorious Website</h1>
+          <h1>Sue's &nbsp<em>Glorious</em>&nbsp Website</h1>
 
     <ul id="nav-ul">
 
