add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
+      <audio controls autoplay class="song">
+        <source src="horse.ogg" type="audio/ogg">
+      </audio>
       <div id="all-contents">
         <nav>
           <h1>Sue's &nbsp<em>Glorious</em>&nbsp Website</h1>
