--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>platformer</title>
+    <title>Vampyre Lyfe Symulator</title>
     <link href="platformer.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="setup.js"></script>
@@ -14,7 +14,7 @@
     <canvas id="canvas" width="1400" height="750"></canvas>
     <img id="cannon" src="images/cannon.png" />
     <img id="player" src="images/halle.png" />
-    <img id="projectile" src="images/projectile.png" />
+    <img id="projectile" src="images/slice-garlic-isolated-png.webp" />
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Test.svg" />
   </body>
 </html>
