--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -17,7 +17,7 @@
 			top: 100px;
 			left: 0px;  /* <--- Change me! */
 		}
-		.board{
+		.board {
 			height: 100vh;
 		}
 	</style>
@@ -62,17 +62,24 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				
+				/* Your code to increase positionX by 10 HERE*/
+				positionX += speed;
+				moveBoxTo(positionX);
 
+				if (positionX > boardWidth) {
+					speed *= -1;
+				} else if (positionX < 0) {
+					speed *= -1;
+				}
 			};
 
 			/* 
@@ -81,8 +88,14 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = 0;
+				points += 1;
+				changeBoxText(points)
+				if (speed > 0) {
+					speed += 3;
+				} else if (speed < 0) {
+					speed -= 3;
+				}
 
 			};
 		})();
