--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -40,16 +40,18 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardHeight = jQuery(window).height();
 
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
+			setInterval(update, 100);
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -63,8 +65,10 @@
 			
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
+			var positionY = 0;
 			var points = 0;
 			var speed = 10;
+			var speedY = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -73,7 +77,8 @@
 			function update() {
 				/* Your code to increase positionX by 10 HERE*/
 				positionX += speed;
-				moveBoxTo(positionX);
+				positionY += speedY;
+				moveBoxTo(positionX, positionY);
 
 				if (positionX > boardWidth) {
 					speed *= -1;
@@ -89,12 +94,19 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
+				positionY = 0;
 				points += 1;
 				changeBoxText(points)
 				if (speed > 0) {
 					speed += 3;
 				} else if (speed < 0) {
 					speed -= 3;
+				}
+
+				if (speedY > 0) {
+					speedY += 3;
+				} else if (speedY < 0) {
+					speedY -= 3;
 				}
 
 			};
