--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -11,11 +11,13 @@
 			background-color: teal;
 			font-size: 300%;
 			text-align: center;
+
 			user-select: none;
 			display: block;
 			position: absolute;
 			top: 100px;
 			left: 0px;  /* <--- Change me! */
+			background-image: url("/projects/bouncing-box/img/Minecraft_Launcher_MS_Icon_little.png")
 		}
 		.board {
 			height: 100vh;
