--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <head>
       <title>Vampires Galore</title>
+      <link rel="icon" type="image/x-icon" href="/imaghes/pngtree-vampire-fangs-png-image_7134667.png">
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
