--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -101,8 +101,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = randomNumX;
-				positionY = randomNumY;
+				positionX = 0;
+				positionY= 0;
 				points += 1;
 				changeBoxText(points)
 				if (speed > 0) {
