--- a/asd-projects/snake/index.html
+++ b/asd-projects/snake/index.html
@@ -4,12 +4,15 @@
   <head>
     <title>Snake</title>
     <!--Link jQuery and CSS here-->
-    
+    <script src="jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
-    
+    <h1 id = "score">Score: 0</h1>
+    <h1 id = "highScore">High Score: 0</h1>
+    <div id = "board"></div>
   </body>
   
   <!-- Link index.js here -->
-  
+  <script src="index.js"></script>
 </html>
